# quasar-plo

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: DESIGN.md  LEARNINGS_PLO.md  ROADMAP.md  SPOT_JSON.md
engine/: CMakeLists.txt
engine/include/quasar/engine/: discretize.h  json.h  plo_legal.h  public_state.h  rules.h  solve_one.h  types.h  version.h
engine/include/quasar/eval/: river.h
engine/include/quasar/nn/: value_net.h
engine/include/quasar/solver/: cfr.h  equity_matrix.h  eval.h
engine/pybind/: CMakeLists.txt  module.cpp
engine/src/: discretize.cpp  plo_legal.cpp  public_state.cpp  solve_one.cpp  version.cpp
engine/src/bench/: bench_solve_one.cpp
engine/src/cli/: main.cpp
engine/src/eval/: river.cpp
engine/src/json/: parse_spot.cpp
engine/src/nn/: torchscript_value_net.cpp
engine/src/solver/: cfr.cpp  equity_matrix.cpp  eval.cpp
python/: README.md  pyproject.toml  requirements.txt
python/quasar/: engine_api.py
python/quasar/bucketing/: river.py
python/quasar/configs/: README.md
python/quasar/data_generation/: __init__.py
python/quasar/eval/: __init__.py
python/quasar/models/: __init__.py  dense_transformer.py
python/quasar/transforms/: __init__.py  packing.py
python/tests/: test_bucketing.py  test_engine_api.py  test_import.py  test_packing.py  test_torchscript.py
scripts/: build_cpp.sh  example_flop.json  example_spot.json  format.sh  setup_venv.sh
scripts/goldens/: equity_K3.csv  example_flop.out.json  example_spot.out.json
tests/: CMakeLists.txt  test_equity_matrix.cpp  test_eval_plo_river.cpp  test_plo_legal.cpp  test_solve_one.cpp  test_torch_wrapper.cpp  test_version.cpp  tests_main.cpp
