[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-plo"
version = "0.1.0"
description = "ReBeL-style Pot-Limit Omaha solver (research scaffold)"
authors = [{ name = "Adam Kelly" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

